Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5776

HdfsTextScanner::WritePartialTuple() writes the varlen data to an incorrect memory pool

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 2.9.0
    • Impala 2.10.0
    • Backend
    • ghx-label-6

    Description

      When writing data into partial tuple, the HDFS text scanner incorrectly allocates the memory from a data buffer pool. The memory in that pool gets attached to row batches. After the row batch is Reset() and the memory is freed, we still have pointers to the var len data in the partial tuple, and we will try to access that data again.

      Attachments

        Issue Links

          Activity

            People

              tarasbob Taras Bobrovytsky
              tarasbob Taras Bobrovytsky
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: